Bug 1290049 - only process ice connection state change if new state differs from old state. r=bwc

MozReview-Commit-ID: KAM1XVIn4Qw

--HG--
extra : rebase_source : 18244caa318b8bccd969cd50069265b467477f26